# terraform-multani-cloud-functions

./: Makefile  README.md  main.py  main.tf  pyproject.toml  requirements.txt
.github/: renovate.json5
.github/workflows/: lint.yml  python.yml  renovate.yml
modules/error-reporting-slack/: function.tf  iam.tf  notification-channel.tf  outputs.tf  secret-http-auth.tf  secret-slack.tf  variables.tf
modules/terraform-cloud-trigger/: data.tf  function.tf  iam.tf  outputs.tf  pubsub.tf  scheduler.tf  secret.tf  variables.tf
multani/: cli.py  functions.py  functions_framework.py  http.py  logging.py  models.py  secrets.py  slack.py  tfcloud.py  tracing.py
multani/google/: models.py
multani/tfcloud/: __init__.py  client.py  models.py
tests/: test_error_reporting.py  test_http.py  test_terraform_trigger.py
tests/fixtures/error-reporting/: error-1.json  test-notification-1.json
