[tool.poetry]
name = "multani"
version = "0.1.0"
description = ""
authors = ["Jonathan Ballet <jon@multani.info>"]

[tool.poetry.dependencies]
python = "^3.12"
click = "8.1.7"
functions-framework = "3.5.0"
google-cloud-secret-manager = "2.18.3"
httpx = "0.27.0"
opentelemetry-api = "1.23.0"
opentelemetry-exporter-gcp-trace = "1.6.0"
opentelemetry-exporter-otlp-proto-grpc = "1.23.0"
opentelemetry-instrumentation-httpx = "0.44b0"
opentelemetry-instrumentation-wsgi = "0.44b0"
opentelemetry-propagator-gcp = "1.6.0"
opentelemetry-sdk = "1.23.0"
pydantic = "2.6.3"
slack-sdk = "3.27.1"
structlog = "24.1.0"
structlog-gcp = "0.2.4"

[tool.poetry.scripts]
multani = "multani.cli:main"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
flask = "3.0.2"
isort = "5.13.2"
mypy = "1.8.0"
pytest = "8.0.2"
pytest-cov = "4.1.0"
ruff = "0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    # It's OK to have long line
    "E501",
]

[tool.isort]
profile = "black"
use_parentheses = false
force_single_line = true

[tool.pytest.ini_options]
addopts = """
--cov multani
--cov-branch
--cov-report html
--cov-report term
--doctest-modules
--tb short
--verbose
"""
testpaths = ["multani", "tests"]
filterwarnings = [
    # https://github.com/googleapis/python-api-common-protos/issues/189
    'ignore:Type google\.:DeprecationWarning',
    # https://github.com/open-telemetry/opentelemetry-python-contrib/issues/1970
    'ignore::DeprecationWarning:opentelemetry:',
    'ignore::DeprecationWarning:pkg_resources',
]

[tool.mypy]
packages = ["multani", "tests"]
strict = true
